[REFACTOR] IDEA mini refactor